--- a/traefik.toml.example
+++ b/traefik.toml.example
@@ -1,41 +1,45 @@
 defaultEntryPoints = ["http", "https"]
 
 [entryPoints]
+  [entryPoints.http]
+  address = ":80"
+    [entryPoints.http.redirect]
+    entryPoint = "https"
+  [entryPoints.https]
+  address = ":443"
+    [entryPoints.https.tls]
+    minVersion = "VersionTLS12"
+    cipherSuites = [
+      "TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256",
+      "TLS_RSA_WITH_AES_256_GCM_SHA384"
+      ]
+    [entryPoints.https.auth]
+      [entryPoints.https.auth.basic]
+      users = ["dracuser:$apr1$7q7zzUND$txFR.JfPQUt3W6O80qNKA1"]
   [entryPoints.dashboard]
-    address = ":8080"
+  address = ":8443"
+    [entryPoints.dashboard.tls]
+    minVersion = "VersionTLS12"
+    cipherSuites = [
+      "TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256",
+      "TLS_RSA_WITH_AES_256_GCM_SHA384"
+      ]
     [entryPoints.dashboard.auth]
       [entryPoints.dashboard.auth.basic]
-        users = ["admin:your_encrypted_password"]
-  [entryPoints.http]
-    address = ":80"
-      [entryPoints.http.redirect]
-        entryPoint = "https"
-  [entryPoints.https]
-    address = ":443"
-      [entryPoints.http.tls]
+      users = ["admin:$apr1$CdbXvOgs$PXIzwr/kmk7LRBvDGwrxu."]
 
 [api]
 entrypoint="dashboard"
 
 [acme]
-email = "your_email@your_domain"
+email = "my_acme_email@mydomain.com"
 storage = "acme.json"
 entryPoint = "https"
-onHostRule = true
-[acme.tlsChallenge]
-[acme.dnsChallenge]
-  resolvers = ["1.1.1.1:53", "8.8.8.8:53"]
+  [acme.dnsChallenge]
   provider = "cloudflare"
-  CF_API_EMAIL = ""
-  CF_API_KEY = ""
-  # provider = "route53"
-  # AWS_ACCESS_KEY_ID = ""
-  # AWS_SECRET_ACCESS_KEY = ""
-  # AWS_REGION = ""
-  # AWS_HOSTED_ZONE_ID = ""
+  delayBeforeCheck = 0
   [[acme.domains]]
-    main = "*.mydomain.com"
-    sans = "mydomain.com"
+  main = "*.mydomain.com"
 
 [docker]
 domain = "mydomain.com"
