--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -5,7 +5,7 @@ networks:
 
 services:
   reverse-proxy:
-    image: traefik
+    image: traefik:1.7.20
     restart: unless-stopped
     ports:
       - "80:80"
