Updates traefik.env.example with warning about compatibility with Cloudflare API keys
Signed-off-by: Troy Fontaine <tfontaine@troyfontaine.com>

--- a/traefik.env.example
+++ b/traefik.env.example
@@ -1,2 +1,3 @@
+# Note-this doesn't appear to be compatible with Cloudflare's new DNS/ZONE API Keys
 CF_API_EMAIL=my_cf_email@mydomain.com
 CF_API_KEY=MYSUP3RS3CUR3K3Y
